Fix overlapping nth-child animation delay selectors
Agent-Logs-Url: https://github.com/tmaier-kettering/nys-builder/sessions/ab028ca5-a682-4c07-af75-9063d4bda785

--- a/styles.css
+++ b/styles.css
@@ -195,15 +195,15 @@ h1 {
   box-shadow: var(--shadow-hover);
 }
 
-.cards .card:nth-child(2n) {
+.cards .card:nth-child(4n + 2) {
   animation-delay: 60ms;
 }
 
-.cards .card:nth-child(3n) {
+.cards .card:nth-child(4n + 3) {
   animation-delay: 100ms;
 }
 
-.cards .card:nth-child(4n) {
+.cards .card:nth-child(4n + 4) {
   animation-delay: 140ms;
 }
 
